step5-your-docker-images/002-deployment/002-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: private-image
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: my-private-image:latest
        imagePullPolicy: Never
        name: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
