step5-your-docker-images/002-deployment/003-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: private-image
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    name: http
  - protocol: TCP
    port: 443
    name: https
