step5-your-docker-images/002-deployment/004-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: private-image
  labels:
    app: nginx
spec:
  rules:
  - host: nginx.private-image.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
